@@ -9,7 +9,6 @@
 package org.elasticsearch.index.mapper;
 
 import org.elasticsearch.common.collect.List;
-import org.elasticsearch.common.collect.Set;
 import org.elasticsearch.index.mapper.TypeFieldMapper.TypeFieldType;
 import org.elasticsearch.index.mapper.flattened.FlattenedFieldMapper;
 import org.elasticsearch.test.ESTestCase;
@@ -20,6 +19,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
@@ -87,9 +87,9 @@ public class FieldTypeLookupTests extends ESTestCase {
 
         FieldTypeLookup lookup = new FieldTypeLookup("_doc", singletonList(field), emptyList(), emptyList());
 
-        assertEquals(Set.of("field"), lookup.sourcePaths("field"));
-        assertEquals(Set.of("field"), lookup.sourcePaths("field.subfield1"));
-        assertEquals(Set.of("field"), lookup.sourcePaths("field.subfield2"));
+        assertEquals(Collections.singleton("field"), lookup.sourcePaths("field"));
+        assertEquals(Collections.singleton("field"), lookup.sourcePaths("field.subfield1"));
+        assertEquals(Collections.singleton("field"), lookup.sourcePaths("field.subfield2"));
     }
 
     public void testSourcePathsWithCopyTo() {
@@ -103,8 +103,8 @@ public class FieldTypeLookupTests extends ESTestCase {
 
         FieldTypeLookup lookup = new FieldTypeLookup("_doc", Arrays.asList(field, otherField), emptyList(), emptyList());
 
-        assertEquals(Set.of("other_field", "field"), lookup.sourcePaths("field"));
-        assertEquals(Set.of("other_field", "field"), lookup.sourcePaths("field.subfield1"));
+        assertEquals(org.elasticsearch.common.collect.Set.of("other_field", "field"), lookup.sourcePaths("field"));
+        assertEquals(org.elasticsearch.common.collect.Set.of("other_field", "field"), lookup.sourcePaths("field.subfield1"));
     }
 
     public void testTypeLookup() {
@@ -198,7 +198,7 @@ public class FieldTypeLookupTests extends ESTestCase {
     }
 
     public void testDynamicRuntimeFields() {
-        FieldTypeLookup fieldTypeLookup = new FieldTypeLookup(emptyList(), emptyList(),
+        FieldTypeLookup fieldTypeLookup = new FieldTypeLookup("_doc", emptyList(), emptyList(),
             Collections.singletonList(new TestDynamicRuntimeField("test")));
 
         assertNull(fieldTypeLookup.get("test"));
